SIC_XE_ASSEMBLER/CalcExpr_R_A_I/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> empty
Rule 3     expression -> MINUS expression
Rule 4     expression -> FACTORIAL expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression MULTIPLY expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression MOD expression
Rule 10    expression -> expression LESST expression
Rule 11    expression -> expression MORET expression
Rule 12    expression -> expression LESSEQ expression
Rule 13    expression -> expression MOREEQ expression
Rule 14    expression -> expression OR expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> NAME EQUALS expression
Rule 17    var -> NAME
Rule 18    expression -> INT
Rule 19    expression -> FLOAT
Rule 20    expression -> var
Rule 21    expression -> LPARENT expression RPARENT
Rule 22    empty -> <empty>

Terminals, with rules where they appear

AND                  : 15
DIVIDE               : 8
EQUALS               : 16
FACTORIAL            : 4
FLOAT                : 19
INT                  : 18
LESSEQ               : 12
LESST                : 10
LPARENT              : 21
MINUS                : 3 6
MOD                  : 9
MOREEQ               : 13
MORET                : 11
MULTIPLY             : 7
NAME                 : 16 17
OR                   : 14
PLUS                 : 5
RPARENT              : 21
UMINUS               : 
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 2
expression           : 1 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 21
var                  : 20

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . empty
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (22) empty -> .
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10
    $end            reduce using rule 22 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3
    var                            shift and go to state 9

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    $end            reduce using rule 1 (calc -> expression .)
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    MULTIPLY        shift and go to state 13
    DIVIDE          shift and go to state 14
    MOD             shift and go to state 15
    LESST           shift and go to state 16
    MORET           shift and go to state 17
    LESSEQ          shift and go to state 18
    MOREEQ          shift and go to state 19
    OR              shift and go to state 20
    AND             shift and go to state 21


state 3

    (2) calc -> empty .

    $end            reduce using rule 2 (calc -> empty .)


state 4

    (3) expression -> MINUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 22
    var                            shift and go to state 9

state 5

    (4) expression -> FACTORIAL . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 23
    var                            shift and go to state 9

state 6

    (16) expression -> NAME . EQUALS expression
    (17) var -> NAME .

    EQUALS          shift and go to state 24
    PLUS            reduce using rule 17 (var -> NAME .)
    MINUS           reduce using rule 17 (var -> NAME .)
    MULTIPLY        reduce using rule 17 (var -> NAME .)
    DIVIDE          reduce using rule 17 (var -> NAME .)
    MOD             reduce using rule 17 (var -> NAME .)
    LESST           reduce using rule 17 (var -> NAME .)
    MORET           reduce using rule 17 (var -> NAME .)
    LESSEQ          reduce using rule 17 (var -> NAME .)
    MOREEQ          reduce using rule 17 (var -> NAME .)
    OR              reduce using rule 17 (var -> NAME .)
    AND             reduce using rule 17 (var -> NAME .)
    $end            reduce using rule 17 (var -> NAME .)
    RPARENT         reduce using rule 17 (var -> NAME .)


state 7

    (18) expression -> INT .

    PLUS            reduce using rule 18 (expression -> INT .)
    MINUS           reduce using rule 18 (expression -> INT .)
    MULTIPLY        reduce using rule 18 (expression -> INT .)
    DIVIDE          reduce using rule 18 (expression -> INT .)
    MOD             reduce using rule 18 (expression -> INT .)
    LESST           reduce using rule 18 (expression -> INT .)
    MORET           reduce using rule 18 (expression -> INT .)
    LESSEQ          reduce using rule 18 (expression -> INT .)
    MOREEQ          reduce using rule 18 (expression -> INT .)
    OR              reduce using rule 18 (expression -> INT .)
    AND             reduce using rule 18 (expression -> INT .)
    $end            reduce using rule 18 (expression -> INT .)
    RPARENT         reduce using rule 18 (expression -> INT .)


state 8

    (19) expression -> FLOAT .

    PLUS            reduce using rule 19 (expression -> FLOAT .)
    MINUS           reduce using rule 19 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 19 (expression -> FLOAT .)
    DIVIDE          reduce using rule 19 (expression -> FLOAT .)
    MOD             reduce using rule 19 (expression -> FLOAT .)
    LESST           reduce using rule 19 (expression -> FLOAT .)
    MORET           reduce using rule 19 (expression -> FLOAT .)
    LESSEQ          reduce using rule 19 (expression -> FLOAT .)
    MOREEQ          reduce using rule 19 (expression -> FLOAT .)
    OR              reduce using rule 19 (expression -> FLOAT .)
    AND             reduce using rule 19 (expression -> FLOAT .)
    $end            reduce using rule 19 (expression -> FLOAT .)
    RPARENT         reduce using rule 19 (expression -> FLOAT .)


state 9

    (20) expression -> var .

    PLUS            reduce using rule 20 (expression -> var .)
    MINUS           reduce using rule 20 (expression -> var .)
    MULTIPLY        reduce using rule 20 (expression -> var .)
    DIVIDE          reduce using rule 20 (expression -> var .)
    MOD             reduce using rule 20 (expression -> var .)
    LESST           reduce using rule 20 (expression -> var .)
    MORET           reduce using rule 20 (expression -> var .)
    LESSEQ          reduce using rule 20 (expression -> var .)
    MOREEQ          reduce using rule 20 (expression -> var .)
    OR              reduce using rule 20 (expression -> var .)
    AND             reduce using rule 20 (expression -> var .)
    $end            reduce using rule 20 (expression -> var .)
    RPARENT         reduce using rule 20 (expression -> var .)


state 10

    (21) expression -> LPARENT . expression RPARENT
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 25
    var                            shift and go to state 9

state 11

    (5) expression -> expression PLUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 26
    var                            shift and go to state 9

state 12

    (6) expression -> expression MINUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 27
    var                            shift and go to state 9

state 13

    (7) expression -> expression MULTIPLY . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 28
    var                            shift and go to state 9

state 14

    (8) expression -> expression DIVIDE . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 29
    var                            shift and go to state 9

state 15

    (9) expression -> expression MOD . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 30
    var                            shift and go to state 9

state 16

    (10) expression -> expression LESST . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 31
    var                            shift and go to state 9

state 17

    (11) expression -> expression MORET . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 32
    var                            shift and go to state 9

state 18

    (12) expression -> expression LESSEQ . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 33
    var                            shift and go to state 9

state 19

    (13) expression -> expression MOREEQ . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 34
    var                            shift and go to state 9

state 20

    (14) expression -> expression OR . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 35
    var                            shift and go to state 9

state 21

    (15) expression -> expression AND . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . NAME EQUALS expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . var
    (21) expression -> . LPARENT expression RPARENT
    (17) var -> . NAME

    MINUS           shift and go to state 4
    FACTORIAL       shift and go to state 5
    NAME            shift and go to state 6
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    LPARENT         shift and go to state 10

    expression                     shift and go to state 36
    var                            shift and go to state 9

state 22

    (3) expression -> MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    PLUS            reduce using rule 3 (expression -> MINUS expression .)
    MINUS           reduce using rule 3 (expression -> MINUS expression .)
    MULTIPLY        reduce using rule 3 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 3 (expression -> MINUS expression .)
    MOD             reduce using rule 3 (expression -> MINUS expression .)
    LESST           reduce using rule 3 (expression -> MINUS expression .)
    MORET           reduce using rule 3 (expression -> MINUS expression .)
    LESSEQ          reduce using rule 3 (expression -> MINUS expression .)
    MOREEQ          reduce using rule 3 (expression -> MINUS expression .)
    OR              reduce using rule 3 (expression -> MINUS expression .)
    AND             reduce using rule 3 (expression -> MINUS expression .)
    $end            reduce using rule 3 (expression -> MINUS expression .)
    RPARENT         reduce using rule 3 (expression -> MINUS expression .)
